     Vietnamese
 * Lua API:
   * proxy getters and setters for unit attributes extra_recruit
     and advances_to
   * new function wesnoth.add_known_unit
   * new proxy getters for sides: fog, shroud, hidden, name, color
   * new function wesnoth.get_time_of_day
   * new functions os.clock, os.date, os.time and os.difftime
 * Multiplayer:
   * New "Shuffle sides" option in MP creation list, allowing to randomize
     player to side assignment (patch #1937 by Quetzalcoatl)
 * User interface:
   * Fix starting location labels being initially invisible in the map editor
     (bug #17956).
   * Fixed bug #18000, #18099: Show a wrongly entered MP password and crash
     upon editing this text.
 * WML engine:
   * new attribute team_name= in SSFs
   * added [event][filter_side]<SSF keys> support
   * added support for inline SSF to [chat]
   * added support for inline SSF to [store_gold]
   * added support for inline SSF to [store_side], added attribute
     "side" in the created array
   * introduced [has_unit]search_recall_list=yes|no (def no) parameter in SSFs
   * support for leader specific recruit lists
     * [unit] extra_recruit= -- defines a unit with a specific recruit list
     * [event] [allow_extra_recruit] [filter] [/filter] type=
        -- adds unit types to a leader's recruit list
     * [event] [disallow_extra_recruit] [filter] [/filter] type=
        -- removes unit types from a leader's recruit list
     * [event] [set_extra_recruit] [filter] [/filter] extra_recruit=
        -- assigns a new recruit list to the leader
   * support for leader specific recall filters
      * [unit] [filter_recall] <SUF>
        -- The unit can only recall units which pass the SUF
   * Removed the Liminal alignment
   * Fixed: a divide by zero in the calculate_map_ownership_function function
   * Possibly fixed: rounding errors when using ^ in formulas (bug #18165)
   * Animation will now cycle according to a WML parameter, use with caution