@@ -4,7 +4,7 @@
     name= _"Drakes"
     image="units/drakes/flare.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Drake Flare
+    type=random
     leader=Drake Flare,Fire Drake,Drake Arbiter,Drake Thrasher,Drake Warrior,Saurian Oracle,Saurian Soothsayer
     random_leader=Drake Flare,Fire Drake,Drake Arbiter,Drake Thrasher,Drake Warrior
     recruit=Drake Burner,Drake Clasher,Drake Glider,Drake Fighter,Saurian Skirmisher,Saurian Augur
