@@ -4,7 +4,7 @@
     name=_"Knalgan Alliance"
     image="units/dwarves/steelclad.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Dwarvish Steelclad
+    type=random
     leader=Dwarvish Steelclad,Dwarvish Thunderguard,Dwarvish Stalwart,Rogue,Trapper
     recruit=Dwarvish Guardsman,Dwarvish Fighter,Dwarvish Ulfserker,Dwarvish Thunderer,Thief,Poacher,Footpad,Gryphon Rider
     terrain_liked=Hh, Ha, Mm
