@@ -4,7 +4,7 @@
     name= _"Northerners"
     image="units/orcs/warrior.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Orcish Warrior
+    type=random
     leader=Orcish Warrior,Troll,Troll Rocklobber,Orcish Crossbowman,Orcish Slayer
     recruit=Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer,Orcish Assassin,Naga Fighter,Goblin Spearman
     terrain_liked=Hh, Ha, Mm, Ss
