@@ -671,6 +671,7 @@ Version 1.9.7:
    * new function wesnoth.get_time_of_day
    * new functions os.clock, os.date, os.time and os.difftime
  * Multiplayer:
+   * Random leader is default selection when picking faction
    * New "Shuffle sides" option in MP creation list, allowing to randomize
      player to side assignment (patch #1937 by Quetzalcoatl)
  * User interface:
